css/main.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

/*
 * -- BASE STYLES --
 * Most of these are inherited from Base, but I want to change a few.
 */
body {
    line-height: 1.7em;
    color: #7f8c8d;
    font-family: 'Lato', sans-serif;
    font-size: 16px;
}

a {
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
label {
    color: #34495e;
}

hr {
  width: 30%;
  height: 2px;
  border: 0;
  background: #8099B2;
}

.pure-g [class *="pure-u"] {
  font-family: 'Lato', sans-serif;
}

.pure-img {
  display: inline;
}

/*
 * -- LAYOUT STYLES --
 * These are some useful classes which I will need
 */
.l-box {
    padding: 1em;
}

.l-box-lrg {
    padding: 2em;
    border-bottom: 1px solid rgba(0,0,0,0.1);
}

.is-center {
    text-align: center;
}

/*
 * -- PURE BUTTON STYLES --
 * I want my pure-button elements to look a little different
 */
.pure-button {
    background-color: #003366;
    color: white;
    padding: 0.5em 2em;
    border-radius: 5px;
}

/*
 * -- MENU STYLES --
 */

.home-menu {
  padding: 0.5em;
  text-align: center;
  box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
}
.home-menu {
  background: #003366;
}

.pure-menu.pure-menu-fixed {
    /* Fixed menus normally have a border at the bottom. */
    border-bottom: none;
    /* I need a higher z-index here because of the scroll-over effect. */
    z-index: 4;
}

.home-menu .pure-menu-heading {
    color: white;
    font-weight: 400;
    font-size: 120%;
}

.home-menu .pure-menu-selected a {
    color: #389738;
}

.home-menu a {
    color: #AECFE5;
}
.home-menu li a:hover,
.home-menu li a:focus {
    background: none;
    border: none;
    color: #389738;
}

.logo {
  padding: 0;
}

/*
 * -- SPLASH STYLES --
 * This is the header top section that appears on the page.
 */

.splash-container {
    background: #003366;
    background: url(../images/woods-spratt-med.jpg) no-repeat center center;
    background-size: cover;
    z-index: 1;
    overflow: hidden;
    /* The following styles are required for the "scroll-over" effect */
    width: 100%;
    height: 88%;
    top: 0;
    left: 0;
    position: fixed !important;
}

.splash {
    /* absolute center .splash within .splash-container */
    width: 80%;
    height: 40%;
    margin: auto;
    position: absolute;
    top: 100px; left: 0; bottom: 0; right: 0;
    text-align: center;
    text-transform: uppercase;
    background: rgba(255,255,255, 0.5);
}

/* This is the main heading that appears on the header section */
.splash-head {
    font-size: 28px;
    color: #0E380E;
    padding: 1em 1.6em;
    margin-bottom: 0;
    font-weight: 300;
    line-height: 1em;
}

/* This is the subheading that appears on the header section */
.splash-subhead {
    color: #0E380E;
    letter-spacing: 0.07em;
}

/*
 * -- CONTENT STYLES --
 * This represents the content area (everything below the head section)
 */
.content-wrapper {
    /* These styles are required for the "scroll-over" effect */
    position: absolute;
    top: 87%;
    width: 100%;
    min-height: 12%;
    z-index: 2;
    background: white;

}

/* This is the class used for the main content headers (<h2>) */
.content-head {
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    margin: 2em 0 1em;
}

/* This is a modifier class used when the content-head is inside a ribbon */
.content-head-ribbon {
    color: white;
    text-align: center;
}

/* This is the class used for the content sub-headers (<h3>) */
.content-subhead {
    color: #003366;
}
.content-subhead i {
    margin-right: 7px;
}

/* This is the class used for the dark-background areas. */
.ribbon {
  background: #003366;
  background: rgba(0, 51, 102, 0.7);
  color: #fff;
}

/* This is the class used for the footer */
.footer {
  background: #003366;
  color: #bbb;
}

.footer a, .footer a:visited {
  color: #AECFE5;
}

.footer a:hover {
  color: #389738;
}

/*"About" text*/
#bio {
  margin: 0 auto;
  display: block;
}

/*This is for text to be bold*/
.bold {
  font-weight: bold;
}

/*This is the id for the attribution link*/
#tollbooth {
  font-style: italic;
}

/*portfolio section*/
.portfolio {
  margin-bottom: 20px;
}

#projects {
  text-align: center;
}

#projects a:link, a:visited {
  color: powderblue;
}

#projects a:hover {
  color: lightseagreen;
}

#projects h2 {
  color: Gainsboro;
}

/* Social buttons */
.social {
  text-align: center;
  margin-bottom: 30px;
}

a.icon {
  margin: 0 15px 0 15px;
  color: #003366;
}

a.icon:hover {
  color: #389738;
}

button {
    margin-top: 30px;
}

button:hover {
  background: #389738;
}

/*
 * -- TABLET (AND UP) MEDIA QUERIES --
 * On tablets and other medium-sized devices, we want to customize some
 * of the mobile styles.
 */
@media (min-width: 48em) {

    /* We increase the body font size */
    body {
        font-size: 16px;
    }
    /* We want to give the content area some more padding */
    .content {
        padding: 1em;
    }

    /* We can align the menu header to the left, but float the
    menu items to the right. */
    .home-menu {
        text-align: left;
    }
        .home-menu ul {
            float: right;
        }

    /* We increase the height of the splash-container */
    .splash-container {
        height: 500px;
    }

    /* We decrease the width of the .splash, since we have more width
    to work with */
    .splash {
        width: 80%;
        height: 50%;
    }

    .splash-head {
        font-size: 250%;
    }


    /* We remove the border-separator assigned to .l-box-lrg */
    .l-box-lrg {
        border: none;
    }

}

/*
 * -- DESKTOP (AND UP) MEDIA QUERIES --
 * On desktops and other large devices, we want to over-ride some
 * of the mobile and tablet styles.
 */
@media (min-width: 78em) {
    /* We increase the header font size even more */
    .splash-head {
        font-size: 300%;
    }
}

